--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter: 
     sdk: flutter
   font_awesome_flutter: ^9.2.0
+  url_launcher: ^6.0.17
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
